# tinybox

./: .dockerignore  .editorconfig  .env.sample  .eslintrc.json  .gitattributes  .gitignore  .prettierignore  ARCHITECTURE.d2  ARCHITECTURE.md  Dockerfile  LICENSE  LICENSE.txt  Makefile  README.md  enviro.code-workspace  package-lock.json  package.json  pyproject.toml  pyrightconfig.json  tinybox.code-workspace
.do/: app.yaml
.github/workflows/: django.yml
app/: .env.sample  README.md  pyproject.toml
app/docs/dev/etl/notes/deprecated/: README.md
app/docs/dev/web/: dev-notes.md
app/docs/prompts/: system.txt
app/src/app/: __about__.py
app/src/app/auth_app/: backends.py  decorators.py  models.py
app/src/app/auth_app/templates/account/: loginxxx.html
app/src/app/auth_app/templates/auth_app/: home.html
app/src/app/web/: settings.py  urls.py
app/src/app/world/: admin.py  urls.py  views.py
app/src/app/world/static/world/: features.js  map_layers.json  map_layers.schema.json  map_style.json  styles.css
app/src/app/world/templates/world/: map_Sidebar.html  map_addLayer_button.html  map_layer_button.html
docs/: ARCHITECTURE.md  CONTRIBUTING.md
docs/dev/: ARCHITECTURE.md
docs/dev/etl/: dev-notes.md
docs/dev/static/: architecture.d2
docs/dev/web/: dev-notes.md
docs/dev/web/workflows/: new-feature-proposal.md
docs/web/: dev-notes.md
etl/: .envrc.sample  .gitignore  README.md
etl/src/general/: gitstars.py  hn_dagster.py
resolver/: pyproject.toml
resolver/libetl/: .gitignore
resolver/libetl/clients/aggregators/ckan/data_gov_au/: curl_client.sh
resolver/libetl/clients/aggregators/ckan/data_vic_gov_au/vic_epa/: readme.md
resolver/libetl/clients/aggregators/ckan/data_vic_gov_au/vic_epa/api/interpretive/: schema.json
resolver/libetl/clients/aggregators/ckan/data_vic_gov_au/vic_planning_authority/: readme.md
resolver/libetl/clients/aggregators/ckan/developer_vic_gov_au/: readme.md
resolver/libetl/clients/direct/data_melbourne_vic_gov_au/api/: readme.md
resolver/libetl/clients/direct/data_melbourne_vic_gov_au/api/schema/: swagger.json
resolver/libetl/thunder-tests/: thunderCollection.json  thunderclient.json
resolver/src/resolver/data/.telemetry/: id.yaml
resolver/src/resolver/data/history/: runs.db
resolver/src/resolver/data/history/runs/: index.db
resolver/src/resolver/data/schedules/: schedules.db
resolver/src/resolver/general/: hackernews.py
src/etl/: README.md  pyproject.toml  requirements.txt
src/etl/general/: __init__.py  setup.cfg  setup.py
src/etl/tests/general_tests/: test_assets.py
src/libetl/clients/aggregators/ckan/data_gov_au/: py_client.py  readme.md
src/libetl/clients/aggregators/ckan/data_vic_gov_au/: client.py
src/libetl/clients/aggregators/ckan/data_vic_gov_au/vic_dot/: readme.md
src/libetl/clients/direct/bom/static/interpretive/: readme.md
src/libetl/data_gov_au/: readme.md
src/libetl/data_vic_gov_au/: readme.md
src/libetl/data_vic_gov_au/vic_dot/: readme.me  road_disruptions.py
src/libetl/data_vic_gov_au/vic_epa/: py_client.py  readme.md
src/libetl/etl/: gdal_cnv_asc_to_geojson.py  geopandas_cnv_asc_to_geojson.py
src/libetl/thunder-tests/: thunderActivity.json
src/tinybox/: __about__.py
tests/: __init__.py
tools/etl/: .gitignore
tools/etl/general/: __init__.py
tools/web/: .gitignore  Aptfile  requirements.txt
tools/web/auth_app/: admin.py  urls.py  views.py
tools/web/auth_app/migrations/: 0001_initial.py
tools/web/auth_app/static/auth_app/: styles.css
tools/web/auth_app/templates/auth_app/: access_denied.html  approve_users.html  base.html
tools/web/staticfiles/world/: map_layers.json  map_sources.json
tools/web/web/: settings.py  urls.py
tools/web/world/: admin.py  load.py  models.py  urls.py  views.py
tools/web/world/Temp to delete/: map_Sidebar2.html
tools/web/world/Temp to delete/map_Sidebar/: map_Sidebar.html
tools/web/world/migrations/: 0001_initial.py  0002_category_polygonarea_pointofinterest_and_more.py  0003_imageoverlay_userlocation.py
tools/web/world/static/world/: controls.js  features.js  layersPanel.js  map.js  map_layers.json  map_layers.schema.json  map_sources.json  map_sources.schema.json  paint_styles.json  paint_styles.schema.json  styles.css
tools/web/world/static/world/map_Sidebar/: Sidebar_TEST.html  tailwind.config.js  tailwind.css
tools/web/world/templates/world/: map.html  map_Sidebar.html  map_Sidebar2.html  map_layer_button.html
tools/web/world/templates/world/map_Sidebar/: map_Sidebar.html  package-lock.json  package.json
