[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tinybox"
description = ''
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
keywords = []
authors = [
  { name = "Alex Claydon", email = "alexclaydon@gmail.com" },
  { name = "Liam Gilchrist", email = "liamgilchrist@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "black",
  "isort",
  "rich",
  "python-dotenv",
  "python-dateutil",
  "requests",
  "Django",
  "psycopg2",
  "django-tailwind",
  "geojson",
  "pandas",
  "Pillow",
  "beautifulsoup4",
  "dagster",
  "dagit",
]
dynamic = ["version"]

[project.urls]
Documentation = "https://github.com/alexclaydon/tinybox#readme"
Issues = "https://github.com/alexclaydon/tinybox/issues"
Source = "https://github.com/alexclaydon/tinybox"

[tool.hatch.version]
path = "src/tinybox/__about__.py"

[tool.hatch.envs.default]
python = "3.9"
type = "virtual"
dependencies = [
  "pytest",
  "pytest-cov",
]

[tool.hatch.envs.default.env-vars]
PIP_FIND_LINKS = "https://github.com/dagster-io/build-grpcio/wiki/Wheels"
PIP_VERBOSE = "2"
DAGSTER_HOME = "/Users/alexclaydon/dev/dev-projects/tinybox/tools/etl/data"
MallocNanoZone = "1"

[tool.hatch.envs.default.scripts]
# Tests
cov = "pytest --cov-report=term-missing --cov-config=pyproject.toml --cov=src/tinybox --cov=tests {args}"
no-cov = "cov --no-cov {args}"
# ETL pipeline
etldev = "dagster dev"
# Web app
webdev = "(trap 'kill 0' SIGINT; python tools/web/manage.py tailwind start & python tools/web/manage.py runserver 8080)"
webmakemigrate = "python tools/web/manage.py makemigrations"
webmigrate = "python tools/web/manage.py migrate"
webshell = "python tools/web/manage.py shell"

[[tool.hatch.envs.test.matrix]]
python = ["39", "310", "311"]

[tool.dagster]
module_name = "tools.etl.general"
# Add each new pipeline module to this list

[tool.coverage.run]
branch = true
parallel = true
omit = [
  "src/tinybox/__about__.py",
]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
